fix(sidebar): change classes and css properties to display sidebar on mobile devices

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -113,7 +113,7 @@ body {
 */
 
 .docs-sidebar {
-  order: 2;
+  order: 0;
 }
 
 @include media-breakpoint-up(lg) {
